# tracking-information-process-ontology

./: .gitignore  README.md  events.owl  tip_ontology.owl  tip_ontology_dev.owl
mappings/: 1_event_process_started.json  2_event_process_finished.json  4_event_data_to_cdm_done_adres.json  4_event_data_to_cdm_done_klant.json  event-mappings.rml.ttl  event-mappings.yml  event_mappings.py  event_mappings_func.py  output.ttl  pyproject.toml
scripts/: build.sh  install.sh  start.sh
