[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tip-event-mappings"
version = "0.0.1"
description = 'Mapping JSON files to RDF with the TIP ontology'
#readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["RDF"]
authors = [
  { name = "Weiwei", email = "weiwei.wang@apg.nl" },
  { name = "Vincent Emonet", email = "vincent.emonet@gmail.com" },
]
classifiers = [
  "Programming Language :: Python",
]

dependencies = [
  "rdflib",
  "requests",
]
